# RAG-tutorial

./: CursorMEMO.md  README.md  pyproject.toml
app/: main.py
app/langsmith_tutorial/: compare_default_role.py  compare_structure.py  evaluate_rag.py  getting_started.py  walkthrough.py
app/rag/: RAG.md  analyze_a_single_long_document.py  langchain_rag_jp_ver.py  langchain_rag_tutorial.py  lcel_chain_type.py  lcel_chain_type_rag.py  rag_over_code.py  remembering_chat_history.py  split_text.py  using_a_retriever.py
app/utils/: news.py  news_preprocess.py
src/rag_tutorial/: __init__.py
